--- a/src/components/Layout.module.css
+++ b/src/components/Layout.module.css
@@ -1,10 +1,4 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-/* .nav {
+.nav {
   display: flex;
   gap: 12px;
 }
@@ -16,4 +10,4 @@
 }
 .active {
   color: rgb(24, 148, 78);
-} */
+}
