--- a/src/components/Layout.module.css
+++ b/src/components/Layout.module.css
@@ -1,6 +1,20 @@
+.header {
+  position: fixed;
+  display: flex;
+  top: 0;
+  width: 100%;
+  padding: 12px 12px;
+  gap: 32px;
+  font-size: 28px;
+  align-items: center;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  background-color: rgb(234, 241, 225);
+}
+
 .nav {
   display: flex;
-  gap: 12px;
+  gap: 20px;
 }
 .link {
   text-decoration: none;
